--- a/.src/std/FTesting.form
+++ b/.src/std/FTesting.form
@@ -2,15 +2,10 @@
 
 { Form Form
   MoveScaled(0,0,64,64)
-  Expand = True
+  Resizable = False
   Arrangement = Arrange.Vertical
   Spacing = True
   Margin = True
-  { pnlData Panel
-    MoveScaled(1,2,61,55)
-    Expand = True
-    AutoResize = True
-  }
   { HBox1 HBox
     MoveScaled(1,59,62,4)
     Spacing = True
@@ -20,12 +15,12 @@
     }
     { btnOK Button
       MoveScaled(29,0,16,4)
-      Text = ("OK")
+      Text = ("Aceptar")
       Default = True
     }
     { btnCancel Button
       MoveScaled(46,0,16,4)
-      Text = ("Cancel")
+      Text = ("Cancelar")
       Cancel = True
     }
   }
